--- a/LaTeX/NOIp.tex
+++ b/LaTeX/NOIp.tex
@@ -8,7 +8,7 @@
 \usepackage[colorlinks,linkcolor=blue]{hyperref}
 
 \lstset{
-	basicstyle=\fontspec{Consolas}
+	basicstyle=\fontspec{Monaco for Powerline}
 }
 
 \begin{document}
